Fixing ellipsis text wrap

--- a/ui/src/style/PostListItem.css
+++ b/ui/src/style/PostListItem.css
@@ -9,6 +9,10 @@
   margin-right: 5px;
 }
 
+.list-card-text {
+  white-space: pre-wrap;
+}
+
 .list-card {
   border-color: #eff1f3;
 }
